codepkg/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <label>NumberOfEmployees</label>
        <summaryForeignKey>UnuverEmployee__c.University__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <summarizedField>UnuverDepartment__c.Count_of_students__c</summarizedField>
        <summaryForeignKey>UnuverDepartment__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>SumCurrency__c  -  SumSalary__c  -  SumScholarship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rector</label>
        <referenceTo>UnuverEmployee__c</referenceTo>
        <relationshipLabel>Universities</relationshipLabel>
        <relationshipName>Universities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SumCurrency__c</fullName>
        <label>SumCurrency</label>
        <summarizedField>Group__c.SumCurrency__c</summarizedField>
        <summaryForeignKey>Group__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumSalary__c</fullName>
        <label>SumSalary</label>
        <summarizedField>UnuverEmployee__c.Salary__c</summarizedField>
        <summaryForeignKey>UnuverEmployee__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumScholarship__c</fullName>
        <label>SumScholarship</label>
        <summarizedField>Group__c.Scholarship__c</summarizedField>
        <summaryForeignKey>Group__c.University__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Univer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>